--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "js2xmlparser": "^5.0.0",
-    "protobufjs": "^7.4.0"
+    "protobufjs": "^7.4.0",
+    "xml-js": "^1.6.11"
   }
 }
